--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <!-- card section -->
+    <div class="header text-center mb-5" style="color: #c5a967;">
+        <h1>Team Zeus Member Card Details</h1>
+    </div>
     <div class="container">
         <div class="row">
 
